Fix orange color being too contrast

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,7 +5,7 @@
 
   --link: #ef5777;
   --link-hover: #0984e3;
-  --thanks: #ff9068;
+  --thanks: #ee5a24;
   --time: #636e72;
 }
 
